refactor: @Transactional 어노테이션 수정